package routes

import (
	"context"
	"log"
	"time"

	pb "todoing-backend/proto/gen/proto"
)

type TaskServiceServer struct {
	pb.UnimplementedTaskServiceServer
}

// CreateTask 实现创建任务
func (s *TaskServiceServer) CreateTask(ctx context.Context, req *pb.CreateTaskRequest) (*pb.CreateTaskResponse, error) {
	log.Printf("gRPC: Creating task with title: %s", req.Title)
	
	// 实际实现中，这里会处理创建任务逻辑
	createdAt := time.Now().Format(time.RFC3339)
	updatedAt := time.Now().Format(time.RFC3339)
	
	task := &pb.Task{
		Id:          "task-id",
		Title:       req.Title,
		Description: req.Description,
		Status:      req.Status,
		Priority:    req.Priority,
		Assignee:    req.Assignee,
		CreatedAt:   createdAt,
		UpdatedAt:   updatedAt,
	}
	
	return &pb.CreateTaskResponse{
		Task:    task,
		Message: "Task created successfully",
	}, nil
}

// GetTasks 实现获取任务列表
func (s *TaskServiceServer) GetTasks(ctx context.Context, req *pb.GetTasksRequest) (*pb.GetTasksResponse, error) {
	log.Printf("gRPC: Getting tasks")
	
	// 实际实现中，这里会处理获取任务列表逻辑
	createdAt := time.Now().Format(time.RFC3339)
	updatedAt := time.Now().Format(time.RFC3339)
	
	tasks := []*pb.Task{
		{
			Id:          "task-1",
			Title:       "Sample Task 1",
			Description: "This is a sample task",
			Status:      pb.TaskStatus_TO_DO,
			Priority:    pb.TaskPriority_MEDIUM,
			CreatedAt:   createdAt,
			UpdatedAt:   updatedAt,
		},
		{
			Id:          "task-2",
			Title:       "Sample Task 2",
			Description: "This is another sample task",
			Status:      pb.TaskStatus_IN_PROGRESS,
			Priority:    pb.TaskPriority_HIGH,
			CreatedAt:   createdAt,
			UpdatedAt:   updatedAt,
		},
	}
	
	return &pb.GetTasksResponse{
		Tasks:   tasks,
		Message: "Tasks retrieved successfully",
	}, nil
}

// GetTask 实现获取单个任务
func (s *TaskServiceServer) GetTask(ctx context.Context, req *pb.GetTaskRequest) (*pb.GetTaskResponse, error) {
	log.Printf("gRPC: Getting task with id: %s", req.Id)
	
	// 实际实现中，这里会处理获取单个任务逻辑
	createdAt := time.Now().Format(time.RFC3339)
	updatedAt := time.Now().Format(time.RFC3339)
	
	task := &pb.Task{
		Id:          req.Id,
		Title:       "Sample Task",
		Description: "This is a sample task",
		Status:      pb.TaskStatus_TO_DO,
		Priority:    pb.TaskPriority_MEDIUM,
		CreatedAt:   createdAt,
		UpdatedAt:   updatedAt,
	}
	
	return &pb.GetTaskResponse{
		Task:    task,
		Message: "Task retrieved successfully",
	}, nil
}

// UpdateTask 实现更新任务
func (s *TaskServiceServer) UpdateTask(ctx context.Context, req *pb.UpdateTaskRequest) (*pb.UpdateTaskResponse, error) {
	log.Printf("gRPC: Updating task with id: %s", req.Id)
	
	// 实际实现中，这里会处理更新任务逻辑
	updatedAt := time.Now().Format(time.RFC3339)
	
	task := &pb.Task{
		Id:          req.Id,
		Title:       req.Title,
		Description: req.Description,
		Status:      req.Status,
		Priority:    req.Priority,
		Assignee:    req.Assignee,
		UpdatedAt:   updatedAt,
	}
	
	return &pb.UpdateTaskResponse{
		Task:    task,
		Message: "Task updated successfully",
	}, nil
}

// DeleteTask 实现删除任务
func (s *TaskServiceServer) DeleteTask(ctx context.Context, req *pb.DeleteTaskRequest) (*pb.DeleteTaskResponse, error) {
	log.Printf("gRPC: Deleting task with id: %s", req.Id)
	
	// 实际实现中，这里会处理删除任务逻辑
	return &pb.DeleteTaskResponse{
		Message: "Task deleted successfully",
	}, nil
}

// AddComment 实现添加评论
func (s *TaskServiceServer) AddComment(ctx context.Context, req *pb.AddCommentRequest) (*pb.AddCommentResponse, error) {
	log.Printf("gRPC: Adding comment to task: %s", req.TaskId)
	
	// 实际实现中，这里会处理添加评论逻辑
	comment := &pb.Comment{
		Id:        "comment-id",
		Text:      req.Text,
		CreatedBy: "user-id",
	}
	
	return &pb.AddCommentResponse{
		Comment: comment,
		Message: "Comment added successfully",
	}, nil
}

// AssignTask 实现分配任务
func (s *TaskServiceServer) AssignTask(ctx context.Context, req *pb.AssignTaskRequest) (*pb.AssignTaskResponse, error) {
	log.Printf("gRPC: Assigning task %s to %s", req.Id, req.Assignee)
	
	// 实际实现中，这里会处理分配任务逻辑
	task := &pb.Task{
		Id:       req.Id,
		Assignee: req.Assignee,
		Title:    "Assigned Task",
		Status:   pb.TaskStatus_TO_DO,
	}
	
	return &pb.AssignTaskResponse{
		Task:    task,
		Message: "Task assigned successfully",
	}, nil
}

// ImportTasks 实现导入任务
func (s *TaskServiceServer) ImportTasks(ctx context.Context, req *pb.ImportTasksRequest) (*pb.ImportTasksResponse, error) {
	log.Printf("gRPC: Importing %d tasks", len(req.Tasks))
	
	// 实际实现中，这里会处理导入任务逻辑
	return &pb.ImportTasksResponse{
		Msg:      "Tasks imported successfully",
		Imported: int32(len(req.Tasks)),
		Errors:   nil,
	}, nil
}

// ExportTasks 实现导出任务
func (s *TaskServiceServer) ExportTasks(ctx context.Context, req *pb.ExportTasksRequest) (*pb.ExportTasksResponse, error) {
	log.Printf("gRPC: Exporting tasks")
	
	// 实际实现中，这里会处理导出任务逻辑
	tasks := []*pb.Task{
		{
			Id:          "task-1",
			Title:       "Sample Task 1",
			Description: "This is a sample task",
			Status:      pb.TaskStatus_TO_DO,
			Priority:    pb.TaskPriority_MEDIUM,
		},
		{
			Id:          "task-2",
			Title:       "Sample Task 2",
			Description: "This is another sample task",
			Status:      pb.TaskStatus_IN_PROGRESS,
			Priority:    pb.TaskPriority_HIGH,
		},
	}
	
	return &pb.ExportTasksResponse{
		Tasks:   tasks,
		Message: "Tasks exported successfully",
	}, nil
}